# sway-layout

./: Cargo.toml  README.md
.github/workflows/: build.yml
examples/: main.json  startup.json  work.json
src/: cli.rs  config.rs  ipc.rs  layout.rs  main.rs  proc.rs  shortcuts.rs  spawn.rs
