[package]
name = "sway-layout"
version = "1.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
nix = { version = "0.31.2", features = ["signal", "process"] }
signal-hook = "0.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
